chore: Corrected the vertical alignment of the ON AIR label.

--- a/packages/webui/src/client/ui/RundownView/RundownHeader/RundownHeader.scss
+++ b/packages/webui/src/client/ui/RundownView/RundownHeader/RundownHeader.scss
@@ -486,6 +486,7 @@
 		background-color: var(--general-live-color);
 		color: #ffffff;
 		padding: 0.03em 0.45em 0.02em 0.2em;
+		top: 0em;
 		border-radius: 2px 999px 999px 2px;
 		// Label font styling override meant to match the ON AIR label on the On Air line
 		font-size: 0.8em;
